[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/various/front/Front.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/backgrounds/menu_bg/bg_black.png" type="Texture" id=3]
[ext_resource path="res://scenes/main_screens/MainMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/main_screens/Config.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/main_screens/Credits.tscn" type="PackedScene" id=6]
[ext_resource path="res://sounds/bgm/Underground.ogg" type="AudioStream" id=7]

[sub_resource type="Animation" id=1]
resource_name = "stop_music"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Curtain/Black:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Curtain/Black:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 0, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Underground:pitch_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.5, 0.5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Underground:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -40.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "config2menu"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( -120, 80 ), Vector2( 120, 80 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera/Background:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 0.25, 4, 4, 1 ),
"update": 0,
"values": [ Vector2( 4, 4 ), Vector2( 5, 5 ), Vector2( 5, 5 ), Vector2( 4, 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Underground:pitch_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.2, 1.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "credits2menu"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 360, 80 ), Vector2( 120, 80 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera/Background:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 0.25, 4, 4, 1 ),
"update": 0,
"values": [ Vector2( 4, 4 ), Vector2( 5, 5 ), Vector2( 5, 5 ), Vector2( 4, 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Underground:pitch_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.2, 1.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 120, 80 ), Vector2( -120, 80 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera/Background:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 0.25, 4, 4, 1 ),
"update": 0,
"values": [ Vector2( 4, 4 ), Vector2( 5, 5 ), Vector2( 5, 5 ), Vector2( 4, 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Underground:pitch_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.2, 1.0 ]
}

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 120, 80 ), Vector2( 360, 80 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera/Background:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 0.25, 4, 4, 1 ),
"update": 0,
"values": [ Vector2( 4, 4 ), Vector2( 5, 5 ), Vector2( 5, 5 ), Vector2( 4, 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Underground:pitch_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.2, 1.0 ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 120, 80 )
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_speed = 1.0

[node name="Front" parent="Camera" instance=ExtResource( 2 )]
position = Vector2( -120, -80 )

[node name="Background" type="Sprite" parent="Camera"]
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="Screens" type="Node" parent="."]

[node name="MainMenu" parent="Screens" instance=ExtResource( 4 )]

[node name="Camera" parent="Screens/MainMenu" index="11"]
current = false

[node name="Config" parent="Screens" instance=ExtResource( 5 )]
editor/display_folded = true
position = Vector2( -240, 0 )

[node name="Credits" parent="Screens" instance=ExtResource( 6 )]
editor/display_folded = true
position = Vector2( 240, 0 )

[node name="Anim" type="AnimationPlayer" parent="."]
anims/stop_music = SubResource( 1 )

[node name="ScreensAnim" type="AnimationPlayer" parent="."]
playback_speed = 0.4
anims/config2menu = SubResource( 2 )
anims/credits2menu = SubResource( 3 )
anims/menu2config = SubResource( 4 )
anims/menu2credits = SubResource( 5 )

[node name="Curtain" type="Node2D" parent="."]
z_index = 1

[node name="Black" type="ColorRect" parent="Curtain"]
margin_right = 240.0
margin_bottom = 160.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="Underground" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
[connection signal="pressed" from="Screens/MainMenu/Info" to="." method="_on_Info_pressed"]
[connection signal="pressed" from="Screens/MainMenu/Config" to="." method="_on_Config_pressed"]
[connection signal="pressed" from="Screens/Config/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Screens/Credits/Back" to="." method="_on_BackCredits_pressed"]

[editable path="Screens/MainMenu"]

[editable path="Screens/Config"]

[editable path="Screens/Credits"]
